# pdfhandler

./: CMakeLists.txt  Paragraph.cpp  Paragraph.h  README.md  main.cpp
scripts/Debug/: pdfhandler.bat
scripts/Release/: pdfhandler.bat
